// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array.php 1`] = `
<?php
$array = [/* comment */];
$array = [
    // comment
];
$array = [ // comment
    // comment
    1, // comment
    2 // comment
    // comment
];
$array = [ /* comment */
    /* comment */
    /* comment */ 1 /* comment */ , /* comment */
    /* comment */ 2 /* comment */
    /* comment */
    /* comment */ ];
$array = [ /* comment */
    /* comment */
    /* comment */ "foo" /* comment */ => /* comment */ "bar", /* comment */
    /* comment */ "bar" /* comment */ => /* comment */ "foo" /* comment */
    /* comment */
    /* comment */ ];
$array = [ // test
    1, 2, 3, 4, 5, 6
];
$array = [
    1, 2, 3, 4, 5, 6 // test
];
const FOO = [
  //testing
  1
];

return [
  // foo
  "bar"
];

$array = [
    'type'      => [],
    'config'    => [
        // comments in nested arrays break things
        'key' => 1,
    ],
    'accepted'  => [],
];

// Comment
$array = []; // Comment
// Comment

/* Comment */
$array /* Comment */ = /* Comment */ []; /* Comment */
/* Comment */
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$array = [
    /* comment */
];
$array = [
    // comment
];
$array = [
    // comment
    // comment
    1,
    // comment
    2 // comment
    // comment
];
$array = [
    /* comment */
    /* comment */
    /* comment */
    1, /* comment */ /* comment */
    /* comment */
    2 /* comment */
    /* comment */
    /* comment */
];
$array = [
    /* comment */
    /* comment */
    /* comment */
    "foo" => /* comment */ /* comment */
    "bar", /* comment */
    /* comment */
    "bar" => /* comment */ /* comment */
    "foo" /* comment */
    /* comment */
    /* comment */
];
$array = [
    // test
    1,
    2,
    3,
    4,
    5,
    6
];
$array = [
    1,
    2,
    3,
    4,
    5,
    6 // test
];
const FOO = [
    //testing
    1
];

return [
    // foo
    "bar"
];

$array = [
    'type' => [],
    'config' => [
        // comments in nested arrays break things
        'key' => 1
    ],
    'accepted' => []
];

// Comment
$array = []; // Comment
// Comment
/* Comment */
$array = /* Comment */ /* Comment */
[]; /* Comment */
/* Comment */

`;

exports[`bin.php 1`] = `
<?php

$variable = FormUtil::isEmpty($this->modelData) ||
    // arrays, countables
    ((is_array($this->modelData) || $this->modelData instanceof \\Countable) && 0 === count($this->modelData)) ||
    // traversables that are not countable
    ($this->modelData instanceof \\Traversable && 0 === iterator_count($this->modelData));

if (2 /* MB_OVERLOAD_STRING */ & (int) ini_get('mbstring.func_overload')) {
    mb_internal_encoding('ASCII');
}

$bool = /*Comment */ true /*Comment */ || /*Comment */ false /*Comment */;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$variable =
    // arrays, countables
    FormUtil::isEmpty($this->modelData) ||
    (
        (
            is_array($this->modelData) || $this->modelData instanceof \\Countable
        ) &&
        0 === count($this->modelData)
    ) ||
    // traversables that are not countable
    (
        $this->modelData instanceof \\Traversable &&
        0 === iterator_count($this->modelData)
    );

if (
    2 & /* MB_OVERLOAD_STRING */
    (int) ini_get('mbstring.func_overload')
) {
    mb_internal_encoding('ASCII');
}

$bool =
    /*Comment */
    true || /*Comment */
    /*Comment */
    false; /*Comment */

`;

exports[`break.php 1`] = `
<?php

for (;;) {
    break /* Comment */;
}

loop: for (;;) {
    break /* Comment */ 1;
    break 1 /* Comment */;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
for (;;) {
    break; /* Comment */
}

loop:
for (;;) {
    break; /* Comment */
    break; /* Comment */
}

`;

exports[`call.php 1`] = `
<?php

foo(/* Comment */ $a /* Comment */, /* Comment */ [] /* Comment */, /* Comment */ ($a + 2) /* Comment */);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
foo(
    /* Comment */
    $a, /* Comment */
    /* Comment */
    [], /* Comment */
    /* Comment */
    ($a + 2) /* Comment */
);

`;

exports[`cast.php 1`] = `
<?php

$var = /* Comment */ (int) /* Comment */ '1' /* Comment */;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$var = /* Comment */
(int) /* Comment */
'1'; /* Comment */

`;

exports[`class.php 1`] = `
<?php
namespace Test\\test\\test;

use Some\\other\\test;

/**
 * @property \\Test\\test $test
 */
class Foo extends Bar implements Baz, Buzz {
  public $test;

  function test() {
    return "test";
  }

  public function &passByReferenceTest() {
    $a = 1;
    return $a;
  }
}

return new class( $this->taxonomy, $this->post_types ) extends Taxonomy_Config {
	// body of anonymous class
	public function get_args() {
		// body of member function of anonymous class
		return []; // after return in member function of anonymous class
	} // after member function on anonymous class

};

$test = new class($arg1) extends Test {
  // some comment
};

$test = new class {
  //some comment
};


namespace Tribe\\Project\\Twig;

interface Template_Interface {
	/**
	 * Build the data that will be available to the template
	 *
	 * @return array
	 */
	public function get_data(): array;

	/**
	 * Render the template and return it as a string
	 *
	 * @return string The rendered template
	 */
	public function render(): string;
}


class Foo {/* Comment */}
interface FooI {/* Comment */}
trait FooT {/* Comment */}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
namespace Test\\test\\test;

use Some\\other\\test;

/**
 * @property \\Test\\test $test
 */
class Foo extends Bar implements Baz, Buzz
{
    public $test;

    function test()
    {
        return "test";
    }

    public function &passByReferenceTest()
    {
        $a = 1;
        return $a;
    }
}

return new class($this->taxonomy, $this->post_types) extends Taxonomy_Config
{
    // body of anonymous class
    public function get_args()
    {
        // body of member function of anonymous class
        return []; // after return in member function of anonymous class
    } // after member function on anonymous class
};

$test = new class($arg1) extends Test
{
    // some comment
};

$test = new class
{
    //some comment
};

namespace Tribe\\Project\\Twig;

interface Template_Interface
{
    /**
     * Build the data that will be available to the template
     *
     * @return array
     */
    public function get_data(): array;

    /**
     * Render the template and return it as a string
     *
     * @return string The rendered template
     */
    public function render(): string;
}

class Foo
{
    /* Comment */
}
interface FooI
{
    /* Comment */
}
trait FooT
{
    /* Comment */
}

`;

exports[`clone.php 1`] = `
<?php

$obj2 = clone /* Comments */ $obj /* Comments */;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$obj2 = clone /* Comments */
$obj; /* Comments */

`;

exports[`comments.php 1`] = `
<?php
/** @var int $int This is a counter. */
$int = 0;

// there should be no docblock here
$int++;

// multi
// line
// comment
// test
$hi = 1;

/**
 * test fwd slash 12/3 comment
 */

/**
 * test backwards slash 1\\2 comment
 */

/**
 * Multi line
* test with wrong indentation
*/

/**
 * Multi line
 * test with right indentation
 */

/**
 * This class acts as an example on where to position a DocBlock.
 */
class Foo
{
    /** @var string|null $title contains a title for the Foo with a max. length of 24 characters */
    protected $title = null;

    /**
     * Sets a single-line title.
     *
     * @param string $title A text with a maximum of 24 characters.
     *
     * @return void
     */
    public function setTitle($title)
    {
        // there should be no docblock here
        $this->title = $title;
    }
}

/*********************
 * Some long comment *
 *********************/

// This is a one-line c++ style comment

/* This is a multi line comment
   yet another line of comment */

/*
This is a multiple-lines comment block
that spans over multiple
lines
*/

# This is a one-line shell-style comment


for ($i = 0; $i < 10; $i++) {
    // some comment
    $a = 1;
    $b = 2;

    while (true) {
        // Some comment
        $test = 1;
    }
}

while (true) {
  // some comment
}

do {
  // some comment
} while (true);

$test = foo ?: bar(function () {
    $foo = "bar";
    // test
});

$constraint = new UniqueEntity(array(
    'message' => 'myMessage'
    // no "em" option set
));

return (
   // parens test
   // some comment
   $test
);

/***
 * Configures the tasks tabs (sub_menu)
 */

class Test {
  /******************************************
   * ORIGINAL SHIPPING DATA
   *****************************************/
   public $test;
}

/*
      some test

  */

  /*
  <a href="#"
      class="btn btn-info ladda-button"
      data-ui-component="unified-modal-opener"
      data-style="zoom-in"
      data-title="Title modal"
      data-size="md"
      data-header="true"
      data-footer="false"
      data-render="contact-form"
      data-view="Title"
      >
      <span class="ladda-label">Modal</span>
  </a>

  Options: data-render - contact-form, render, template-part
  */

/**
 * See http://example.com
 *
 * Some example code
 * \`\`\`php
 * $hello = 'world'; // This is a comment in a comment
 * \`\`\`
 */
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/** @var int $int This is a counter. */
$int = 0;

// there should be no docblock here
$int++;

// multi
// line
// comment
// test
$hi = 1;

/**
 * test fwd slash 12/3 comment
 */

/**
 * test backwards slash 1\\2 comment
 */

/**
 * Multi line
 * test with wrong indentation
 */

/**
 * Multi line
 * test with right indentation
 */

/**
 * This class acts as an example on where to position a DocBlock.
 */
class Foo
{
    /** @var string|null $title contains a title for the Foo with a max. length of 24 characters */
    protected $title = null;

    /**
     * Sets a single-line title.
     *
     * @param string $title A text with a maximum of 24 characters.
     *
     * @return void
     */
    public function setTitle($title)
    {
        // there should be no docblock here
        $this->title = $title;
    }
}

/*********************
 * Some long comment *
 *********************/

// This is a one-line c++ style comment
/* This is a multi line comment
 yet another line of comment */

/*
This is a multiple-lines comment block
that spans over multiple
lines
*/

# This is a one-line shell-style comment

for ($i = 0; $i < 10; $i++) {
    // some comment
    $a = 1;
    $b = 2;

    while (true) {
        // Some comment
        $test = 1;
    }
}

while (true) {
    // some comment
}

do {
    // some comment
} while (true);

$test =
    foo
    ?: bar(function () {
        $foo = "bar";
        // test
    });

$constraint = new UniqueEntity(array(
    'message' => 'myMessage'
    // no "em" option set
));

return (
    // parens test
    // some comment
    $test
);

/***
 * Configures the tasks tabs (sub_menu)
 */

class Test
{
    /******************************************
     * ORIGINAL SHIPPING DATA
     *****************************************/
    public $test;
}

/*
      some test

  */

/*
  <a href="#"
      class="btn btn-info ladda-button"
      data-ui-component="unified-modal-opener"
      data-style="zoom-in"
      data-title="Title modal"
      data-size="md"
      data-header="true"
      data-footer="false"
      data-render="contact-form"
      data-view="Title"
      >
      <span class="ladda-label">Modal</span>
  </a>

  Options: data-render - contact-form, render, template-part
  */

/**
 * See http://example.com
 *
 * Some example code
 * \`\`\`php
 * $hello = 'world'; // This is a comment in a comment
 * \`\`\`
 */

`;

exports[`continue.php 1`] = `
<?php

for (;;) {
    continue /* comment */;
}

loop: for (;;) {
    continue /* comment */ 1;
    continue 1 /* comment */;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
for (;;) {
    continue; /* comment */
}

loop:
for (;;) {
    continue; /* comment */
    continue; /* comment */
}

`;

exports[`do.php 1`] = `
<?php
// Comment
do { // Comment
    // Comment
    echo $i; // Comment
    // Comment
} while ($i > 0); // Comment

do {
} while (/* Comments */ true /* Comments */);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
// Comment
do {
    // Comment
    // Comment
    echo $i; // Comment
    // Comment
} while ($i > 0); // Comment

do {
} while (
    /* Comments */
    true /* Comments */
);

`;

exports[`echo.php 1`] = `
<?php

// Comment
echo // Comment
    $foo, // Comment
    $bar // Comment
; // Comment

/* Comment */echo/* Comment */$foo/* Comment */,/* Comment */$bar/* Comment */;/* Comment */~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
// Comment
echo // Comment
$foo,
    // Comment
$bar; // Comment // Comment

/* Comment */
echo /* Comment */
$foo, /* Comment */
    /* Comment */
$bar; /* Comment */ /* Comment */

`;

exports[`edge_cases.php 1`] = `
<?php
class Test{
  public function testFunction (/* inline */ $arg) {
    // body
  }

  function testFunction ($arg1, /* inline */ $arg2) {

  }
}

function testFunction (/* inline */ $arg) {
  // body
}

function testFunction ($arg1, /* inline */ $arg2) {

}

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
class Test
{
    public function testFunction(
        /* inline */
        $arg
    ) {
        // body
    }

    function testFunction(
        $arg1,
        /* inline */
        $arg2
    ) {

    }
}

function testFunction(
    /* inline */
    $arg
) {
    // body
}

function testFunction(
    $arg1,
    /* inline */
    $arg2
) {

}

`;

exports[`empty.php 1`] = `
<?php

if (empty(/* Comment */ [] /* Comment */)) {
    echo "Foo";
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
if (
    empty(
        /* Comment */
        [] /* Comment */
    )
) {
    echo "Foo";
}

`;

exports[`eval.php 1`] = `
<?php

eval(
    /* Comment */
    "echo 'test';"
    /* Comment */
);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
eval(
    /* Comment */
    "echo 'test';"
    /* Comment */
);

`;

exports[`exit.php 1`] = `
<?php

exit(/* Comment */);
exit(/* Comment */1);
exit(1/* Comment */);
exit(/* Comment */1/* Comment */);
exit()/* Comment */;
/* Comment */exit/* Comment */()/* Comment */;~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
exit(
    /* Comment */);
exit(
    /* Comment */
    1
);
exit(
    1 /* Comment */
);
exit(
    /* Comment */
    1 /* Comment */
);
exit(); /* Comment */
/* Comment */
exit(
    /* Comment */); /* Comment */

`;

exports[`for.php 1`] = `
<?php
for // Comment
(;;);

for /* Comment */(;;);

// Comment
for ($i = 1; $i <= 10; $i++) { // Comment
    // Comment
    echo $i; // Comment
    // Comment
} // Comment


for (/* Comments */ $i /* Comments */ = /* Comments */ 1 /* Comments */; /* Comments */ $i /* Comments */ <= /* Comments */ 10 /* Comments */; /* Comments */ $i++ /* Comments */) {
    echo $i;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
// Comment
for (;;);

/* Comment */
for (;;);

// Comment
for ($i = 1; $i <= 10; $i++) {
    // Comment
    // Comment
    echo $i; // Comment
    // Comment
} // Comment

for ($i = 1; $i <= 10; $i++) {
    /* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
    echo $i;
}

`;

exports[`foreach.php 1`] = `
<?php
// Comment
foreach ($iterable as $value) { // Comment
    // Comment
    echo 'Foo'; // Comment
    // Comment
} // Comment


foreach (/* Comments */ $iterable /* Comments */ as /* Comments */ $value /* Comments */) {}

foreach (/* Comments */ $iterable /* Comments */ as /* Comments */ $key /* Comments */ => /* Comments */ $value /* Comments */) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
// Comment
foreach ($iterable as $value) {
    // Comment
    // Comment
    echo 'Foo'; // Comment
    // Comment
} // Comment

foreach ($iterable as $value) {/* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
}

foreach ($iterable as $key => $value) {/* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
    /* Comments */
}

`;

exports[`functions.php 1`] = `
<?php

function foo(/* comment */ $a /* comment */ = /* comment */ 1 /* comment */): /* comment */ ?string /* comment */ {}

function emptyFn(/*Comment */) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
function foo(
    /* comment */
    $a
        = /* comment */
        /* comment */
        1 /* comment */ /* comment */
): ?string {
    /* comment */

}

function emptyFn()
{
    /*Comment */

}

`;

exports[`global.php 1`] = `
<?php

global /* Comment */ $a /* Comment */, /* Comment */ $b /* Comment */;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
global /* Comment */
    $a, /* Comment */
    /* Comment */
    $b; /* Comment */

`;

exports[`goto.php 1`] = `
<?php

/* Comment */goto/* Comment */a/* Comment */;
echo 'Foo';

/* Comment */a/* Comment */:/* Comment */
echo 'Bar';~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/* Comment */
goto a; /* Comment */ /* Comment */
echo 'Foo';

/* Comment */
/* Comment */
a: /* Comment */
echo 'Bar';

`;

exports[`halt.php 1`] = `
<?php

/*Comment*/__halt_compiler/*Comment*/(/*Comment*/)/*Comment*/;~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/*Comment*/
__halt_compiler(); /*Comment*/ /*Comment*/ /*Comment*/

`;

exports[`heredoc.php 1`] = `
<?php
$str = /* Comment */<<<EOD
Example of string
spanning multiple lines
using heredoc syntax.
EOD;
/* Comment */

echo $str;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$str = <<<EOD
Example of string
spanning multiple lines
using heredoc syntax.
EOD; /* Comment */
/* Comment */

echo $str;

`;

exports[`if.php 1`] = `
<?php
// Comment
if (1) { // Comment
    // Comment
    echo "Foo"; // Comment
    // Comment
} elseif (2) { // Comment
    // Comment
    echo "Bar";
    // Comment
} else { // Comment
    // Comment
    echo "FooBar";
    // Comment
} // Comment

if (/* Comments */ true /* Comments */) {
} elseif (/* Comments */ false /* Comments */) {
} else {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
// Comment
if (1) {
    // Comment
    // Comment
    echo "Foo"; // Comment
    // Comment
} elseif (2) {
    // Comment
    // Comment
    echo "Bar";
    // Comment
} else {
    // Comment
    // Comment
    echo "FooBar";
    // Comment
} // Comment

if (
    /* Comments */
    true /* Comments */
) {
} elseif (
    /* Comments */
    false /* Comments */
) {
} else {
}

`;

exports[`include.php 1`] = `
<?php
// Comment
include // Comment
    // Comment
    "test.php" // Comment
    // Comment
; // Comment

// Comment
include (// Comment
    // Comment
"test.php" // Comment
    // Comment
); // Comment
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
// Comment
include // Comment
// Comment
"test.php"; // Comment // Comment
// Comment
// Comment
include // Comment
    // Comment
    "test.php"; // Comment
    // Comment // Comment

`;

exports[`isset.php 1`] = `
<?php

if (isset(/* Comment */ $a[1]/* Comment */)) {
    echo "Foo";
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
if (
    isset(
        /* Comment */
        $a[1] /* Comment */
    )
) {
    echo "Foo";
}

`;

exports[`list.php 1`] = `
<?php

list(/* Comment */ $drink /* Comment */ , /* Comment */ $color /* Comment */, /* Comment */ $power /* Comment */) = $info;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
list(
    /* Comment */
    $drink, /* Comment */
    /* Comment */
    $color, /* Comment */
    /* Comment */
    $power /* Comment */
) = $info;

`;

exports[`method.php 1`] = `
<?php

class Foo {
    public function foo(/* comment */ $a /* comment */ = /* comment */ 1 /* comment */): /* comment */ ?string /* comment */ {}

    public function emptyMethod(/* comments */) {}

    /* comment */ protected /* comment */ static /* comment */ $foo /* comment */;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
class Foo
{
    public function foo(
        /* comment */
        $a
            = /* comment */
            /* comment */
            1 /* comment */ /* comment */
    ): ?string {
        /* comment */

    }

    public function emptyMethod()
    {
        /* comments */

    } /* comment */

    /* comment */
    /* comment */
    protected static $foo; /* comment */
}

`;

exports[`no_code.php 1`] = `
<?php
/**
 * Product Loop Start
 *
 * @author  WooThemes
 * @package WooCommerce/Templates
 * @version 2.0.0
 */
?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/**
 * Product Loop Start
 *
 * @author  WooThemes
 * @package WooCommerce/Templates
 * @version 2.0.0
 */
`;

exports[`nowdoc.php 1`] = `
<?php
$str = /* Comment */<<<'EOD'
Example of string
spanning multiple lines
using nowdoc syntax.
EOD;
/* Comment */

echo $str;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$str = /* Comment */
<<<'EOD'
Example of string
spanning multiple lines
using nowdoc syntax.
EOD;
/* Comment */

echo $str;

`;

exports[`offsetlookup.php 1`] = `
<?php

echo /*Comment*/$a/*Comment*/[/*Comment*/1/*Comment*/]/*Comment*/;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
echo /*Comment*/
/*Comment*/
$a[/*Comment*/
    1]; /*Comment*/ /*Comment*/

`;

exports[`parameter.php 1`] = `
<?php

function foo(/* Comment */ $a, /* Comment */ array /* Comment */ $b /* Comment */ = /* Comment */ [] /* Comment */) {};

function bar(/* Comment */ &$a /* Comment */) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
function foo(
    /* Comment */
    $a,
    /* Comment */
    array $b /* Comment */ /* Comment */
        = /* Comment */
        [] /* Comment */
) {

}

function bar(
    /* Comment */
    &$a /* Comment */
) {

}

`;

exports[`post.php 1`] = `
<?php

$a/* Comment */++;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$a++; /* Comment */

`;

exports[`pre.php 1`] = `
<?php

++/*Comment */$a;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
++/*Comment */
$a;

`;

exports[`print.php 1`] = `
<?php

print // Comment
    $foo
    /* Comment */
    ;

print /* Comment */ $foo /* Comment */;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
print // Comment
$foo;
/* Comment */
print /* Comment */
$foo; /* Comment */

`;

exports[`propertylookup.php 1`] = `
<?php

echo $a/*Comment*/->/*Comment*/bar();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
echo /*Comment*/
/*Comment*/
$a->bar();

`;

exports[`silent.php 1`] = `
<?php

@/*comment*/test();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
@/*comment*/
test();

`;

exports[`static.php 1`] = `
<?php
static /* Comment */ $a /* Comment */, /* Comment */ $b /* Comment */;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
static /* Comment */
    $a, /* Comment */
    /* Comment */
    $b; /* Comment */

`;

exports[`staticlookup.php 1`] = `
<?php

echo Foo/*Comment*/::/*Comment*/bar();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
echo /*Comment*/
/*Comment*/
Foo::bar();

`;

exports[`switch.php 1`] = `
<?php
// Comment
switch ($i) { // Comment
    // Comment
    case 0: // Comment
        // Comment
        echo "i equals 0"; // Comment
        // Comment
        break; // Comment
        // Comment
    case 1: // Comment
        // Comment
        echo "i equals 1"; // Comment
        break; // Comment
        // Comment
} // Comment

switch (/* Comment */ 1 /* Comment */) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
// Comment
switch ($i) {
    // Comment
    // Comment
    case 0: // Comment
        // Comment
        echo "i equals 0"; // Comment
        // Comment
        break; // Comment
    // Comment
    case 1: // Comment
        // Comment
        echo "i equals 1";
        // Comment
        break; // Comment
    // Comment
} // Comment

switch (
    /* Comment */
    1 /* Comment */
) {
}

`;

exports[`throw.php 1`] = `
<?php

// Comment
throw new ClassName( // Comment
    1, // Comment
    // Comment
    2 // Comment
); // Comment

/* Comment */
throw new ClassName( /* Comment */
    /* Comment */ 1, /* Comment */
    /* Comment */
    /* Comment */ 2 /* Comment */
    /* Comment */); /* Comment */
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
// Comment
throw new ClassName(
    // Comment
    1, // Comment
    // Comment
    2 // Comment
); // Comment

/* Comment */
throw new ClassName( /* Comment */
    /* Comment */
    1, /* Comment */
    /* Comment */
    /* Comment */
    2 /* Comment */
    /* Comment */
); /* Comment */

`;

exports[`traits.php 1`] = `
<?php

class ImplementingClass {
    /* Comment */
    /* Comment */ use /* Comment */ testTrait /* Comment */, /* Comment */ otherTrait /* Comment */;
    /* Comment */ use /* Comment */ testTrait /* Comment */, /* Comment */ implementingTrait /* Comment */ { /* Comment */
        /* Comment */ A/* Comment */::/* Comment */ testFunction /* Comment */ insteadof /* Comment */ C /* Comment */ ; /* Comment */
        /* Comment */ B/* Comment */::/* Comment */ someOtherTestFunction /* Comment */ as /* Comment */ aliasedFunctionName /* Comment */; /* Comment */
        /* Comment */ C/* Comment */::/* Comment */ testFunction /* Comment */ as  /* Comment */ private /* Comment */ testVisibility /* Comment */;
    }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
class ImplementingClass
{
    /* Comment */
    /* Comment */
    /* Comment */
    use testTrait, /* Comment */ /* Comment */
    otherTrait; /* Comment */
    /* Comment */
    /* Comment */
    use testTrait, /* Comment */ /* Comment */
    implementingTrait { /* Comment */ /* Comment */
        /* Comment */
        A::testFunction insteadof C; /* Comment */ /* Comment */ /* Comment */ /* Comment */ /* Comment */ /* Comment */
        /* Comment */
        B::someOtherTestFunction as aliasedFunctionName; /* Comment */ /* Comment */ /* Comment */ /* Comment */ /* Comment */ /* Comment */
        /* Comment */
        C::testFunction as private testVisibility; /* Comment */ /* Comment */ /* Comment */ /* Comment */ /* Comment */ /* Comment */
    }
}

`;

exports[`unary.php 1`] = `
<?php

+/* Comment */$a;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
+/* Comment */
$a;

`;

exports[`unset.php 1`] = `
<?php

unset(/* Comment */ $foo /* Comment */);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
unset(
    /* Comment */
    $foo /* Comment */
);

`;

exports[`usegroup.php 1`] = `
<?php

use /* Comment */ some\\namespaces\\/* Comment */{
    /* Comment */ClassA/* Comment */,
    /* Comment */ ClassB/* Comment */,
    /* Comment */ ClassC /* Comment */ as /* Comment */ C
};
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
use some\\namespaces\\{
    /* Comment */
    /* Comment */
    /* Comment */
    ClassA, /* Comment */
    /* Comment */
    ClassB, /* Comment */
    /* Comment */
    ClassC /* Comment */
    /* Comment */ as C
};

`;

exports[`variadic.php 1`] = `
<?php

foo(.../*Comment*/$foo);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
foo(
    .../*Comment*/
    $foo
);

`;

exports[`while.php 1`] = `
<?php
// Comment 1
while (true) { // Comment 2
    // Comment 3
    echo 'Foo'; // Comment 4
    // Comment 5
} // Comment

while (/* Comments */ true /* Comments */) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
// Comment 1
while (true) {
    // Comment 2
    // Comment 3
    echo 'Foo'; // Comment 4
    // Comment 5
} // Comment

while (
    /* Comments */
    true /* Comments */
) {
}

`;

exports[`yield.php 1`] = `
<?php

function gen_one_to_three() {
    yield /* Comment */ $i  /* Comment */;
    yield  /* Comment */ $id  /* Comment */ =>  /* Comment */ $fields  /* Comment */;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
function gen_one_to_three()
{
    yield /* Comment */
    $i; /* Comment */
    yield /* Comment */
    $id => /* Comment */ /* Comment */
    $fields; /* Comment */
}

`;

exports[`yieldfrom.php 1`] = `
<?php

function gen() {
    yield 0;
    yield from /* Comment */ from();
    yield 4;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
function gen()
{
    yield 0;
    yield from /* Comment */
    from();
    yield 4;
}

`;
